<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="5dp">

    <LinearLayout
        android:id="@+id/app_news_dialog"
        android:layout_width="match_parent"
        android:layout_height="268dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/app_news_dialog_day_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/app_news_instructions_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@drawable/app_news_dialog_day_button"
                android:drawableLeft="@drawable/icon_news_instructions"
                android:drawablePadding="11dp"
                android:gravity="left|center_vertical"
                android:onClick="onClick"
                android:paddingLeft="40dp"
                android:text="@string/news_instructions_text"
                android:textSize="@dimen/content_title_textsize" />
            <!--android:visibility="gone"-->
            <Button
                android:id="@+id/app_news_share_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@drawable/app_news_dialog_day_button"
                android:drawableLeft="@drawable/app_news_share_night"
                android:drawablePadding="11dp"
                android:gravity="left|center_vertical"
                android:onClick="onClick"
                android:paddingLeft="40dp"
                android:text="@string/news_share_text"
                android:textSize="@dimen/content_title_textsize" />

        </LinearLayout>


        <View
            android:id="@+id/app_news_read_mode_line"
            android:layout_width="324dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="#ff3B4451" />

        <TextView
            android:id="@+id/app_news_read_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/news_read_mode"
            android:textColor="#ff1D2128"
            android:textSize="@dimen/content_smaller_textsize" />

        <LinearLayout
            android:id="@+id/app_news_mode_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:background="@drawable/app_news_dialog_day_button">

            <Button
                android:id="@+id/app_news_mode_day_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="11dp"
                android:gravity="left|center_vertical"
                android:onClick="onClick"
                android:paddingLeft="34dp"
                android:textAllCaps="false"
                android:text="@string/news_day_mode_text"
                android:textColor="#FF999999"
                android:textSize="@dimen/content_title_textsize"
                android:visibility="gone" />

            <View
                android:id="@+id/app_news_mode_line"
                android:layout_width="0.5dp"
                android:layout_height="50dp"
                android:background="#FFD6D6D6"
                android:visibility="gone" />

            <Button
                android:id="@+id/app_news_mode_night_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@null"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/app_news_day_night"
                android:drawablePadding="11dp"
                android:gravity="left|center_vertical"
                android:onClick="onClick"
                android:paddingBottom="5dp"
                android:paddingLeft="34dp"
                android:paddingTop="5dp"
                android:text="@string/news_night_mode_text"
                android:textSize="@dimen/content_title_textsize"
                android:visibility="gone" />

            <TextView
                android:id="@+id/app_news_mode_night_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="15dp"
                android:text="@string/news_read_mode"
                android:textColor="@color/white"
                android:textSize="@dimen/content_title_textsize" />

            <ImageView
                android:id="@+id/app_news_mode_sun_img"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="50dp"
                android:src="@drawable/app_news_mode_day_light" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/app_news_mode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="24dp"

                android:foregroundGravity="right" />

            <ImageView
                android:id="@+id/app_news_mode_moon_img"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="19dp"
                android:src="@drawable/app_news_mode_light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/app_news_font_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_font_name_text"
                android:textColor="#ff1D2128"
                android:textSize="@dimen/content_smaller_textsize" />

            <View
                android:id="@+id/app_news_font_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:background="#FFD6D6D6"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/app_news_font_normal_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/app_news_dialog_day_button"
                android:onClick="onClick"
                android:text="@string/news_font_smaller"
                android:textAllCaps="false"
                android:textColor="#FF999999"
                android:textSize="@dimen/content_title_textsize" />

            <Button
                android:id="@+id/app_news_font_middle_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/app_news_dialog_day_button"
                android:onClick="onClick"
                android:text="@string/news_font_normal"
                android:textAllCaps="false"
                android:textSize="@dimen/content_title_textsize" />

            <Button
                android:id="@+id/app_news_font_big_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/app_news_dialog_day_button"
                android:onClick="onClick"
                android:text="@string/news_font_big_text"
                android:textAllCaps="false"
                android:textSize="@dimen/content_title_textsize" />

            <Button
                android:id="@+id/app_news_font_biggest_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/app_news_dialog_day_button"
                android:onClick="onClick"
                android:text="@string/news_font_biggest_text"
                android:textAllCaps="false"
                android:textSize="@dimen/content_title_textsize" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>